--- a/assets/pug/data/tables.pug
+++ b/assets/pug/data/tables.pug
@@ -949,3 +949,27 @@
                 },
             ]    
         };
+
+//- ====== Checkout-table json ====== -//
+-
+    var PRODUCT_DETAIL= 
+        {
+            body:[
+            {
+                mainTitle: "Category",
+                subTitle: "Bags",   
+            },
+            { 
+                mainTitle: "Brand",
+                subTitle: "Backy Fashion",   
+            },
+            {
+                mainTitle: "Color",
+                subTitle: "Black",   
+            },
+            {
+                mainTitle: "Material",
+                subTitle: "Leather",   
+            },
+        ]    
+    };
