--- a/assets/postcss/components/_email.css
+++ b/assets/postcss/components/_email.css
@@ -2,77 +2,77 @@
   Email CSS
   ==========================*/
 @layer components {
-  .email-main{
-   .email-read{
-      li{
+  .email-main {
+    .email-read {
+      li {
         @apply border-r border-border-light px-[.375rem];
-          &:first-child,
-          &:last-child{
-            @apply border-none;
-        } 
+        &:first-child,
+        &:last-child {
+          @apply border-none;
+        }
       }
     }
 
-    .emailRead{
+    .emailRead {
       @apply hidden;
-      &.show{
+      &.show {
         @apply block;
       }
     }
-    .emailList{
+    .emailList {
       @apply block;
-      &.hide{
+      &.hide {
         @apply hidden;
       }
     }
   }
-  .email-dropzone{
-    &.filepond--root{
+  .email-dropzone {
+    &.filepond--root {
       @apply h-[4.8125rem];
-      .filepond--credits{
+      .filepond--credits {
         @apply hidden;
       }
 
-      .filepond--drop-label{
+      .filepond--drop-label {
         @apply border border-border-light rounded-5 bg-white;
-        label{
+        label {
           @apply bg-white;
-          .filepond--label-action{
+          .filepond--label-action {
             @apply text-primary decoration-primary;
           }
         }
       }
-      .filepond--file{
+      .filepond--file {
         @apply bg-gray-light;
       }
 
-      *:not(text){
+      *:not(text) {
         @apply bg-white;
       }
-      .filepond--list{
-        .filepond--item{
-          .filepond--file{
+      .filepond--list {
+        .filepond--item {
+          .filepond--file {
             @apply text-title p-[.4375rem];
             .filepond--file-action-button {
-              &.filepond--action-remove-item{
+              &.filepond--action-remove-item {
                 &:hover,
-                &:focus{
+                &:focus {
                   @apply shadow-none;
                 }
-                svg{
+                svg {
                   @apply bg-gray-light text-title;
                 }
               }
-              &.filepond--action-retry-item-load{
-                svg{
+              &.filepond--action-retry-item-load {
+                svg {
                   @apply text-title;
                 }
               }
             }
-            .filepond--file-info{
+            .filepond--file-info {
               @apply bg-gray-light;
-              .filepond--file-info-main, 
-              .filepond--file-info-sub{
+              .filepond--file-info-main,
+              .filepond--file-info-sub {
                 @apply bg-transparent;
               }
             }
@@ -80,11 +80,71 @@
         }
       }
       .filepond--panel {
-        &.filepond--panel-root{
+        &.filepond--panel-root {
           @apply border border-border-light;
         }
       }
-    } 
+    }
+  }
+  .show-preview {
+    &.filepond--root {
+      .filepond--credits {
+        @apply hidden;
+      }
+      .filepond--drop-label {
+        @apply border border-border-light rounded-5 bg-white;
+        label {
+          @apply bg-white;
+          .filepond--label-action {
+            @apply text-primary decoration-primary;
+          }
+        }
+      }
+      .filepond--file {
+        @apply bg-gray-light;
+      }
+
+      *:not(text) {
+        @apply bg-white;
+      }
+      .filepond--list {
+        .filepond--item {
+          .filepond--file {
+            @apply text-title p-[.4375rem];
+            .filepond--file-action-button {
+              &.filepond--action-remove-item {
+                &:hover,
+                &:focus {
+                  @apply shadow-none;
+                }
+                svg {
+                  @apply bg-transparent text-white;
+                }
+              }
+              &.filepond--action-retry-item-load {
+                svg {
+                  @apply text-title;
+                }
+              }
+            }
+            .filepond--file-info {
+              @apply bg-transparent;
+              .filepond--file-info-main,
+              .filepond--file-info-sub {
+                @apply bg-transparent;
+              }
+            }
+          }
+        }
+      }
+      .filepond--panel {
+        &.filepond--panel-root {
+          @apply border border-border-light;
+        }
+      }
+      .filepond--drip {
+        @apply border border-content3;
+      }
+    }
   }
 }
-
