--- a/assets/pug/pages/unique/product.pug
+++ b/assets/pug/pages/unique/product.pug
@@ -141,8 +141,8 @@ html(lang='en')
                                                     li.text-xs.font-medium.text-content3 Leading fashion brand since 30 years
                                                     li.text-xs.font-medium.text-content3 6 months warranty
                                             div(data-tabContent="3" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4")
-                                                div.flex.flex-col.gap-3
-                                                    div.border.border-border-light.border-dashed.flex.flex-col.gap-3.p-3
+                                                div.flex.flex-col.gap-0
+                                                    div.flex.flex-col.gap-3.p-3(class="first:border-b first:border-border-light first:border-dashed last:border-none")
                                                         div.flex.items-center.justify-between.gap-2
                                                             div.flex.items-center.gap-0
                                                                 i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
@@ -158,7 +158,7 @@ html(lang='en')
                                                             div
                                                                 h4(class="text-xs font-semibold text-title") Kitten
                                                                 span(class="block mt-1 font-semibold text-2xs text-content") California, US
-                                                    div.border.border-border-light.border-dashed.flex.flex-col.gap-3.p-3
+                                                    div.flex.flex-col.gap-3.p-3(class="first:border-b first:border-border-light first:border-dashed last:border-none")
                                                         div.flex.items-center.justify-between.gap-2
                                                             div.flex.items-center.gap-0
                                                                 i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
