--- a/assets/pug/pages/unique/shop.pug
+++ b/assets/pug/pages/unique/shop.pug
@@ -341,11 +341,11 @@ html(lang='en')
                                 div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
                                 div.flex.items-center.gap-3
                                     label.text-title.text-sm.font-medium(for="size") Sizes   
-                                    div.flex.items-center
-                                        button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") S 
-                                        button.btn.btn-md.btn-active.text-title.leading-none.border.border-border-light.bg-gray-extralight.rounded-none(class="hover:bg-gray-extralight") M
-                                        button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") L
-                                        button.btn.btn-md.border.border-border-light.rounded-none.text-title.leading-none(class="hover:bg-gray-extralight") XL
+                                    ul.flex.items-center.gap-2
+                                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") S 
+                                        li.btn-active.text-title.leading-none.w-8.h-8.flex.items-center.justify-center.border.border-border-light.bg-gray-extralight.rounded-full(class="hover:bg-gray-extralight") M
+                                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") L
+                                        li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") XL
                                 div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
                                 div.flex.flex-wrap.gap-2.items-center.capitalize(class="2lg:gap-1") 
                                     a(href="cart.html").btn.btn-primary.text-white.text-sm(class="lg:px-2 lg:text-xs") Add to cart         
