--- a/assets/pug/mixin/mixin.pug
+++ b/assets/pug/mixin/mixin.pug
@@ -27,6 +27,7 @@ include ./element-traffic-list.pug
 include ./element-widget1.pug
 include ./element-widget2.pug
 include ./element-widget3.pug
+include ./element-wishlist-product-box.pug
 
 //- =====================
 //-  Chat Mixing  
