--- a/assets/pug/pages/unique/add-product.pug
+++ b/assets/pug/pages/unique/add-product.pug
@@ -47,9 +47,10 @@ html(lang='en')
                 // Page Body Start
                 div.page-body 
                     div.grid.grid-cols-12.gap-4.add-product.card
-                        div.col-span-8(class="lg:col-span-12 lg:border-none lg:pr-0 rtl:lg:pl-0 border-r border-border-light pr-4 rtl:border-l rtl:pl-4 rtl:pr-unset")
+                        div.col-span-8(class="2lg:col-span-12 lg:border-b lg:border-r-0 lg:pr-0 rtl:lg:pl-0 border-r border-border-light pr-4 rtl:border-l rtl:pl-4 rtl:pr-unset")
                             div 
-                                form(action="index.html" class="theme-form flex flex-col gap-4 m-0")
+                                h5.text-title.font-semibold.mb-3 Create Product 
+                                form(class="theme-form flex flex-col gap-4 m-0")
                                     div 
                                         label(for="productName") Product Name
                                         input(type="text" id="productName" value="Women's Latest Bags" required)
@@ -58,16 +59,8 @@ html(lang='en')
                                         textarea(placeholder="A bag that holds your entire universe!" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
                                     div.grid.grid-cols-12.gap-5
                                         div.col-span-6(class="2md:col-span-6 sm:col-span-12")
-                                            label(for="category") Category
-                                            select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="category" aria-label='Default select example')
-                                                option(selected='') Applications
-                                                option(value='1') Grocery
-                                                option(value='2') Fashion
-                                                option(value='3') Electronics
-                                                option(value='4') Furniture
-                                                option(value='5') Watch
-                                                option(value='6') Kitchen
-                                                option(value='7') Beauty & Personal Care
+                                            label(for="sku") SKU
+                                            input(type="text" id="sku" value="Women's Latest Bags" required)                                            
                                         div.col-span-6(class="2md:col-span-6 sm:col-span-12")
                                             label(for="brand") Brand
                                             select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="brand" aria-label='Default select example')
@@ -88,10 +81,10 @@ html(lang='en')
                                         div.col-span-4(class="2md:col-span-6 sm:col-span-12")
                                             label(for="qty") Quantity
                                             input(type="text" id="qty" placeholder="Enter product quantity.." required)                                            
-                                        div.col-span-4(class="2md:col-span-6 sm:col-span-12")
+                                        div.col-span-4(class="2md:col-span-12")
                                             label(for="price") Price 
                                             div.flex.items-center
-                                                span.flex.items-center.justify-center.bg-gray-light.text-title.border.border-border-light.rounded-5.rounded-br-none.rounded-tr-none.font-medium.text-xs(class="!leading-snug py-[12px] px-[11px]") $
+                                                span.flex.items-center.justify-center.bg-gray-light.text-title.border.border-border-light.rounded-5.rounded-br-none.rounded-tr-none.font-medium.text-xs(class="!leading-[18px] py-[12px] px-[11px]") $
                                                 input(type="text" id="price" placeholder="300" class="p-[11px]").w-full.rounded-5.border.border-border-light.text-xs.text-content(class="!rounded-bl-none !rounded-tl-none")                                       
                                     div.grid.grid-cols-12.gap-5 
                                         div.col-span-6(class="2md:col-span-6 sm:col-span-12")
@@ -103,34 +96,59 @@ html(lang='en')
                                         div.col-span-6(class="2md:col-span-6 sm:col-span-12")
                                             label(for="discount") Discount
                                             div.flex.items-center
-                                                span.flex.items-center.justify-center.bg-gray-light.text-title.border.border-border-light.rounded-5.rounded-br-none.rounded-tr-none.font-medium.text-xs(class="!leading-snug py-[12px] px-[11px]") %
+                                                span.flex.items-center.justify-center.bg-gray-light.text-title.border.border-border-light.rounded-5.rounded-br-none.rounded-tr-none.font-medium.text-xs(class="!leading-[18px] py-[12px] px-[11px]") %
                                                 input(type="text" id="discount" placeholder="10" class="p-[11px]").w-full.rounded-5.border.border-border-light.text-xs.text-content(class="!rounded-bl-none !rounded-tl-none")
                                     div
                                         label(for="productImage") Product Images
-                                        input(type="file" class="show-preview" id="productImage")
+                                        input(type="file" class="show-preview cursor-pointer" id="productImage")
                                     
-                        div.col-span-4
-                            form(action="index.html" class="theme-form flex flex-col gap-4 m-0")
-                                div 
-                                    label(for="productTag") Product Tags
-                                    div.border.border-border-light(class=" rounded-5 w-full p-[11px] text-xs font-semibold text-title flex gap-2")
-                                        span.font-semibold.bg-primary.flex.items-center.gap-2.px-2.py-1.rounded-3xl(class="!w-fit !text-3xs !text-white !leading-none")
-                                            |   leather
-                                            i(data-feather="x", class="w-3 h-3 stroke-white alert-del cursor-pointer")
-                                        input(type="text" id="productTag" class="!border-none !p-0" required)
-                                div 
-                                    label(for="productShortDescription") Product Short Description 
-                                    textarea(placeholder="Enter Short description for product.." row="3" id="productShortDescription" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
-                                    
-                                div 
-                                    label(for="manufactureName") Manufacturer Name
-                                    input(type="text" id="manufactureName" placeholder="Enter manufacture name.." required)
-                                div 
-                                    label(for="manufacturerBrand") Manufacturer Brand 
-                                    input(type="text" id="manufacturerBrand" placeholder="Enter manufacture brand.." required)
-                                div 
-                                    label(for="description") Additional 
-                                    textarea(placeholder="Enter product description.." row="3" id="description" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                        div.col-span-4(class="2lg:col-span-12")
+                            div.border-b.border-border-light.pb-3
+                                h5.text-title.font-semibold.mb-3 Publish
+                                form(class="theme-form flex flex-col gap-4 m-0")
+                                    div 
+                                        label(for="publishStatus") Status
+                                        select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="publishStatus" aria-label='Default select example')
+                                            option(selected='') Published
+                                            option(value='1') Draft
+                                    div 
+                                        label(for="publishVisible") Visibility
+                                        select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="publishVisible" aria-label='Default select example')
+                                            option(selected='') Hidden
+                                            option(value='1') Public
+                                    div 
+                                        label(for="category") Product Category
+                                        select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="category" aria-label='Default select example')
+                                            option(selected='') Applications
+                                            option(value='1') Grocery
+                                            option(value='2') Fashion
+                                            option(value='3') Electronics
+                                            option(value='4') Furniture
+                                            option(value='5') Watch
+                                            option(value='6') Kitchen
+                                            option(value='7') Beauty & Personal Care
+                                    div 
+                                        label(for="productTag") Product Tags
+                                        div.border.border-border-light(class=" rounded-5 w-full p-[11px] text-xs font-semibold text-title flex gap-2")
+                                            span.font-semibold.bg-primary.flex.items-center.gap-2.px-2.py-1.rounded-3xl(class="!w-fit !text-3xs !text-white !leading-none")
+                                                |   leather
+                                                i(data-feather="x", class="w-3 h-3 stroke-white alert-del cursor-pointer")
+                                            input(type="text" id="productTag" class="!border-none !p-0" required)
+                                    div 
+                                        label(for="productShortDescription") Product Short Description 
+                                        textarea(placeholder="Enter Short description for product.." row="3" id="productShortDescription" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                            div.pt-3
+                                h5.text-title.font-semibold.mb-3 General Info
+                                form(class="theme-form flex flex-col gap-4 m-0")
+                                    div 
+                                        label(for="manufactureName") Manufacturer Name
+                                        input(type="text" id="manufactureName" placeholder="Enter manufacture name.." required)
+                                    div 
+                                        label(for="manufacturerBrand") Manufacturer Brand 
+                                        input(type="text" id="manufacturerBrand" placeholder="Enter manufacture brand.." required)
+                                    div 
+                                        label(for="description") Additional 
+                                        textarea(placeholder="Enter product description.." row="3" id="description" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
                                     
 
 
