started kanban design

--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -1,131 +1,136 @@
 
 
 if (feather)
-    // Feather Icon Js 
-    script(src='../../assets/js/feather.min.js')
-    script(src='../../assets/js/feather-custom.js')
+  // Feather Icon Js 
+  script(src='../../assets/js/feather.min.js')
+  script(src='../../assets/js/feather-custom.js')
 
 if (customSelect)
-    // Select Js 
-    script(src='../../assets/js/custom-select.js')
+  // Select Js 
+  script(src='../../assets/js/custom-select.js')
 
 if(dataMap)
-    // Data Map js
-    script(src="../../assets/js/map/data-map/d3.min.js")     
-    script(src="../../assets/js/map/data-map/topojson.min.js")     
-    script(src="../../assets/js/map/data-map/datamaps.world.min.js")        
-    script(src="../../assets/js/map/data-map/custom.js") 
+  // Data Map js
+  script(src="../../assets/js/map/data-map/d3.min.js")     
+  script(src="../../assets/js/map/data-map/topojson.min.js")     
+  script(src="../../assets/js/map/data-map/datamaps.world.min.js")        
+  script(src="../../assets/js/map/data-map/custom.js") 
 
 
 if (fullCalender)
-    // Full Calender Js 
+  // Full Calender Js 
 
-    script(src='../../assets/js/fullcalender.js')
-    script(src='../../assets/js/fullcalender-custom.js')
+  script(src='../../assets/js/fullcalender.js')
+  script(src='../../assets/js/fullcalender-custom.js')
 
 if (chartJs) 
-    // Chart Js
-    script(src='../../assets/js/chartjs/chart.min.js')
-    script(src='../../assets/js/chartjs/chartist.js')
-    script(src='../../assets/js/chartjs/chartist-plugin-tooltip.js')
+  // Chart Js
+  script(src='../../assets/js/chartjs/chart.min.js')
+  script(src='../../assets/js/chartjs/chartist.js')
+  script(src='../../assets/js/chartjs/chartist-plugin-tooltip.js')
 
 if (apexChart)
-    // Apex Chart Js 
-    script(src='../../assets/js/apexchart/apexcharts.js')
-    script(src='../../assets/js/apexchart/apex-common.js')
-    if (uniqueApex)
-        script(src='../../assets/js/apexchart/unique-custom.js')
-    if (friendlyApex)
-        script(src='../../assets/js/apexchart/friendly-custom.js')
-    if (minimalApex)
-        script(src='../../assets/js/apexchart/minimal-custom.js')
-    if (materialApex)
-        script(src='../../assets/js/apexchart/material-custom.js')
-    if(customApexChart)
-        script(src='../../assets/js/apexchart/custom-apex-charts.js')
+  // Apex Chart Js 
+  script(src='../../assets/js/apexchart/apexcharts.js')
+  script(src='../../assets/js/apexchart/apex-common.js')
+  if (uniqueApex)
+    script(src='../../assets/js/apexchart/unique-custom.js')
+  if (friendlyApex)
+    script(src='../../assets/js/apexchart/friendly-custom.js')
+  if (minimalApex)
+    script(src='../../assets/js/apexchart/minimal-custom.js')
+  if (materialApex)
+    script(src='../../assets/js/apexchart/material-custom.js')
+  if(customApexChart)
+    script(src='../../assets/js/apexchart/custom-apex-charts.js')
 
 if (prism)
-    // prism js
-    script(src='../../assets/js/prism.js')
+  // prism js
+  script(src='../../assets/js/prism.js')
 
 if (sidebar)
-    // Sidebar Js 
-    script(src='../../assets/js/sidebar.js')
+  // Sidebar Js 
+  script(src='../../assets/js/sidebar.js')
 
 if (iconCopy)
-    // Icon Copy Js 
-    script(src='../../assets/js/icon-copy.js')
+  // Icon Copy Js 
+  script(src='../../assets/js/icon-copy.js')
 
 if (swiper)
-    // swiper slider js
-    script(src="../../assets/js/swiper-slider/swiper-bundle.min.js")
-    script(src="../../assets/js/swiper-slider/swiper-slider-page.js")
+  // swiper slider js
+  script(src="../../assets/js/swiper-slider/swiper-bundle.min.js")
+  script(src="../../assets/js/swiper-slider/swiper-slider-page.js")
 
 if (wow)
-    // wow animation js
-    script(src="../../assets/js/wow.js")
-    script(src="../../assets/js/wow-custom.js")
+  // wow animation js
+  script(src="../../assets/js/wow.js")
+  script(src="../../assets/js/wow-custom.js")
 
 if (toast)
-    //toast js
-    script(src="../../assets/js/toast.js")
+  //toast js
+  script(src="../../assets/js/toast.js")
 
 if (emojiPicker)
-    // emojiPicker js
-    script( src="../../assets/js/emoji-picker/uikit.min.js") 
-    script( src="../../assets/js/emoji-picker/uikit-icons.min.js") 
-    script( src="../../assets/js/emoji-picker/vanillaEmojiPicker.js") 
-    script( src="../../assets/js/emoji-picker/emojiPicker-custom.js") 
+  // emojiPicker js
+  script( src="../../assets/js/emoji-picker/uikit.min.js") 
+  script( src="../../assets/js/emoji-picker/uikit-icons.min.js") 
+  script( src="../../assets/js/emoji-picker/vanillaEmojiPicker.js") 
+  script( src="../../assets/js/emoji-picker/emojiPicker-custom.js") 
 
 if (photoswipe)
-    // photoswipe js
-    script( src="../../assets/js/photoswipe/photoswipe-lightbox.esm.js") 
-    script( src="../../assets/js/photoswipe/photoswipe-custom.js") 
+  // photoswipe js
+  script( src="../../assets/js/photoswipe/photoswipe-lightbox.esm.js") 
+  script( src="../../assets/js/photoswipe/photoswipe-custom.js") 
 
 if(chatApp)
-    // chatApp js
-    script(src="../../assets/js/chat-app/chat-app-page.js")
+  // chatApp js
+  script(src="../../assets/js/chat-app/chat-app-page.js")
 
 if(emailApp)
-    // emailApp js
-    script(src="../../assets/js/email-app/email-app-page.js")
+  // emailApp js
+  script(src="../../assets/js/email-app/email-app-page.js")
 
 if(ecommerce)
-    // ecommerce js
-    script(src="../../assets/js/ecommerce-app/ecommerce-app-page.js")
+  // ecommerce js
+  script(src="../../assets/js/ecommerce-app/ecommerce-app-page.js")
 
 if(otp)
-    // otp js
-    script(src="../../assets/js/otp.js")
+  // otp js
+  script(src="../../assets/js/otp.js")
 
 if(fontAwesome)
-    // fontAwesome js
-    script(src="../../assets/js/fontawesome/all.min.js")
+  // fontAwesome js
+  script(src="../../assets/js/fontawesome/all.min.js")
 
 if(macy)
-    // macy js
-    script(src="../../assets/js/macy.min.js")
-    script(src="../../assets/js/macy.js")
+  // macy js
+  script(src="../../assets/js/macy.min.js")
+  script(src="../../assets/js/macy.js")
 
 if(textEditor)
-    // textEditor js
-    script(src="../../assets/js/text-editor.js")
+  // textEditor js
+  script(src="../../assets/js/text-editor.js")
 
 if(dropzone)
-    // dropzone js
-    script(src="../../assets/js/dropzone.js")
+  // dropzone js
+  script(src="../../assets/js/dropzone.js")
 
 if(filepond)
-    // filepond js
-    script(src="../../assets/js/filepond/filepond-plugin-image-preview.js") 
-    script(src="../../assets/js/filepond/filepond-plugin-file-rename.js") 
-    script(src="../../assets/js/filepond/filepond-plugin-image-transform.js") 
-    script(src="../../assets/js/filepond/filepond.js")
-    script(src="../../assets/js/filepond/filepond-custom.js") 
+  // filepond js
+  script(src="../../assets/js/filepond/filepond-plugin-image-preview.js") 
+  script(src="../../assets/js/filepond/filepond-plugin-file-rename.js") 
+  script(src="../../assets/js/filepond/filepond-plugin-image-transform.js") 
+  script(src="../../assets/js/filepond/filepond.js")
+  script(src="../../assets/js/filepond/filepond-custom.js") 
+
+if(jkanabBoard)
+  // jkanban js    
+  script( src="../../assets/js/jkanban.min.js")         
+  script( src="../../assets/js/jkanban-custom.js")
 
 if(customizer)
-    // customizer js
-    script(src="../../assets/js/customizer.js") 
+  // customizer js
+  script(src="../../assets/js/customizer.js") 
 
 // Custom script   
 script(src='../../assets/js/script.js')   
