--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1534,8 +1534,18 @@ input:focus {
 .divider.horizontal {
   display: flex;
 }
+.divider.\!horizontal {
+  display: flex;
+}
 .divider.horizontal:before,
             .divider.horizontal:after {
+  position: absolute;
+  height: 100%;
+  width: 0.0625rem;
+  background-color: var(--primary-light);
+}
+.divider.\!horizontal:before,
+            .divider.\!horizontal:after {
   position: absolute;
   height: 100%;
   width: 0.0625rem;
@@ -6257,6 +6267,9 @@ code[class*="language-"],
 .w-\[calc\(100\%_-_0rem\)\] {
   width: calc(100% - 0rem);
 }
+.w-\[calc\(100\%_-_12px\)\] {
+  width: calc(100% - 12px);
+}
 .w-\[calc\(100\%_-_130px\)\] {
   width: calc(100% - 130px);
 }
@@ -6946,6 +6959,10 @@ code[class*="language-"],
 .rounded-xl {
   border-radius: 0.75rem;
 }
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
 .rounded-l-2xl {
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
@@ -6953,6 +6970,10 @@ code[class*="language-"],
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
+}
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
 }
 .\!rounded-bl-none {
   border-bottom-left-radius: 0px !important;
@@ -7119,6 +7140,18 @@ code[class*="language-"],
 .border-white-light {
   border-color: rgba(255,255,255,0.15);
 }
+.border-l-danger {
+  border-left-color: var(--danger);
+}
+.border-l-info {
+  border-left-color: var(--info);
+}
+.border-l-success {
+  border-left-color: var(--success);
+}
+.border-l-warning {
+  border-left-color: var(--warning);
+}
 .\!bg-border-light {
   background-color: var(--border-light) !important;
 }
@@ -7281,6 +7314,9 @@ code[class*="language-"],
 }
 .stroke-dark {
   stroke: var(--dark);
+}
+.stroke-gray-500 {
+  stroke: #6b7280;
 }
 .stroke-info {
   stroke: var(--info);
@@ -8119,6 +8155,11 @@ code[class*="language-"],
 .shadow-none {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
@@ -10411,16 +10452,6 @@ code[class*="language-"],
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.hover\:scale-95:hover {
-  --tw-scale-x: .95;
-  --tw-scale-y: .95;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.hover\:scale-100:hover {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .hover\:rounded-br-\[25px\]:hover {
   border-bottom-right-radius: 25px;
 }
@@ -10578,14 +10609,14 @@ code[class*="language-"],
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.group:hover .group-hover\:scale-125 {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .group:hover .group-hover\:scale-100 {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.group:hover .group-hover\:scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .group:hover .group-hover\:stroke-primary {
@@ -11300,6 +11331,9 @@ code[class*="language-"],
   .\32xl\:gap-2 {
     gap: 0.5rem;
   }
+  .\32xl\:gap-3 {
+    gap: 0.75rem;
+  }
   .\32xl\:gap-\[0\.375rem\] {
     gap: 0.375rem;
   }
@@ -11315,6 +11349,9 @@ code[class*="language-"],
   .\32xl\:gap-\[9px\] {
     gap: 9px;
   }
+  .\32xl\:p-4 {
+    padding: 1rem;
+  }
   .\32xl\:px-\[12px\] {
     padding-left: 12px;
     padding-right: 12px;
@@ -11327,6 +11364,11 @@ code[class*="language-"],
     font-size: 1.125rem;
     line-height: 1.375rem;
     letter-spacing: 0.03125rem;
+  }
+  .\32xl\:text-xs {
+    font-size: 0.875rem;
+    line-height: 1.4;
+    letter-spacing: 0.025rem;
   }
 }
 @media (max-width: 1199px) {
